## Process this file with automake to produce Makefile.in
# $Id: Makefile.am,v 1.1 2005/08/24 22:45:51 leif Exp $

pkgsysconfdir = $(sysconfdir)/pythia-0.8/citcoms
dist_pkgsysconf_DATA = \
	full.odb \
	full-sphere.odb \
	globus.odb \
	incomp-newtonian.odb \
	incomp-non-newtonian.odb \
	lam-mpi.odb \
	lsf.odb \
	mpich.odb \
	pbs.odb \
	regional.odb \
	regional-sphere.odb \
	temp.odb \
	__vault__.odb

## end of Makefile.am
